# sae

./: .gitmodules  Makefile  README.md
inc/: clients.h  core.h  editor.h  item.h  items.h  line.h  lines.h  list.h  list.header.h  list.source.h  network.h  options.h
sae-term-c/: .clang-format  CMakeLists.txt
sae-term-c/src/: args.c  args.h  check.h  editor.c  editor.h  logging.c  logging.h  main.c  view.c  view.h
sae-term-c/src/components/: buffer.c  buffer.h  component.h  status.c  status.h
sae-term-c/src/events/: action.c  action.h  event.h  mode.h  queue.c  queue.h
sae-term-c/src/objects/: point.h
sae-term-c/src/text/: buffer.c  buffer.h  char.c  char.h  list.h
sae-term-c/tests/: main.c  unit_char.c  unit_queue.c
src/: clients.c  core.c  editor.c  item.c  items.c  line.c  lines.c  main.c  network.c  options.c
